<resources>
    <string name="app_name">TP3</string>
    <string name="connection">Connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_information">Login information</string>
    <string name="unscrambled_text">Unscrambled text</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="unscramble_the_word_using_all_the_letters">Unscramble the word using all the letters</string>
    <string name="create_an_account">Create an account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="change_password">Change password</string>
    <string name="my_profile">My profile</string>
    <string name="difficulty">Difficulty</string>
    <string name="save_changes">Save changes</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="all">All</string>
</resources>